<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98fb98"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="第3問"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@id/group2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton9"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/group2" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton10"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton9" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton11"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton10" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton12"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton11" />

    </RadioGroup>

    <Button
        android:id="@id/next_button"
        android:text="@string/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/group2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/return_button"
        />

    <Button
        android:id="@id/return_button"
        android:text="@string/return_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/group2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/next_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/next_button"/>

</android.support.constraint.ConstraintLayout>
